--- a/templates/craft_sicherungWebsite/templates/projekte/index.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/index.html
@@ -5,7 +5,7 @@
 {% block headerbildPosition1 %}
 
 <div class="container-fluid no-padding" style="padding-top: 70px;">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }} ">
+  <img class="img-fluid w-100" src=" {{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }} ">
 </div>
 
 
