--- a/templates/craft_sicherungWebsite/templates/spenden/regelmaesigallgemein.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/regelmaesigallgemein.html
@@ -20,7 +20,7 @@
 
 
 
-<div class="container-fluid no-padding" style="background-color: #ed6e2c; padding-bottom: 30px;">
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px;">
   <div class="container zwoelferspaltenlayout" style="background-color: #ffffff;">
     <div class="row">
       <div class="col-sm-8">
