--- a/templates/craft_sicherungWebsite/templates/spenden/index.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/index.html
@@ -8,16 +8,11 @@
 
 </div>
 
-<div class="container-fluid no-padding" style="padding-top: 0px;">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-spenden-header.jpg').one().getUrl() }} ">
-</div>
-
+  <img class="img-fluid w-100" src=" {{ craft.assets.filename('chance-spenden-header.jpg').one().getUrl() }} ">
 
 {% endblock %}
 
 {% block block1 %}
-
-
 
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
@@ -33,11 +28,12 @@
 
   <div class="container zwoelferspaltenlayout">
     <div class="card-deck">
-    <div class="card" style="background-color: #ee6e2d;">
 
-      <h3 style="color: white"> {{ entry.text }} </h3>
+    <div class="card" style="padding: 1.5rem; background-image: url({{ entry.bild.one().url }});">
+      <img class="card-img-top mx-auto d-block"  src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}" alt="Card image"
+      style="max-height: 160px; max-width: 160px;">
+      <h3 style="color: white; padding-top: 2rem;"> {{ entry.text }} </h3>
       <div id="copy" style="color: white"> {{ entry.zusatzfeld2 }}  </div>
-
       <div class="row text-center">
         <div class="col-lg-1"> </div>
       <div class="col-lg-4" style="margin-right: -3%; ">
@@ -47,13 +43,13 @@
         <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Einmalig Spenden</a>
       </div>         <div class="col-lg-1"> </div>
     </div> <br>
-
     </div>
 
-    <div class="card" style="background-color: #ee6e2d;">
-      <h3 style="color: white"> {{ entry.zusatzfeld1 }} </h3>
+    <div class="card" style="padding: 1.5rem; background-image: url({{ entry.bild.one().url }});">
+      <img class="card-img-top mx-auto d-block"  src="  {% if entry.bild3.one() is not null %}  {{ entry.bild3.one().getUrl() }}  {% endif %}" alt="Card image"
+      style="max-height: 160px; max-width: 160px;">
+      <h3 style="padding-top: 2rem; color: white"> {{ entry.zusatzfeld1 }} </h3>
       <div id="copy" style="color: white"> {{ entry.zusatzfeld3 }}  </div> <br>
-
       <div class="row text-center">
         <div class="col-lg-1"> </div>
       <div class="col-lg-4" style="margin-right: -3%; ">
@@ -63,32 +59,41 @@
         <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Einmalig Spenden</a>
       </div>         <div class="col-lg-1"> </div>
     </div> <br>
-
     </div>
-  </div>
+  </div> <!-- Die zwei Spendenboxen -->
 
 </div> <!-- zwoelferspaltenlayout-container -->
 
-<div class="container achterspaltenlayout">
+<div class="container achterspaltenlayout" style="padding-top: 2rem;">
   {% set entry = craft.entries.section('spenden').slug('spendenmultiplikator').one() %}
   <div class="text-center">
     <h2> {{ entry.title }} </h2>
     <div id="copy"> {{ entry.anleser }}  </div>
   </div>
     <div class="card-deck">
-    <div class="card" style="background-color: #ffffff; padding: 2%;">
+    <div class="card" style="background-color: #ffffff;">
+      <div class="wrapper" style="background-image: url({{ entry.bild.one().url }});">
+      <img class="card-img-top mx-auto d-block" style="max-height: 160px; max-width: 160px; margin-top: 2rem; margin-bottom: 2rem;"
+       src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}" alt="Card image">
+     </div>
+     <div class="card-body">
       <h3> {{ entry.text }} </h3>
       <div id="copy"> {{ entry.zusatzfeld1 }}  </div>
-      <br>
+    </div>
     </div>
 
-    <div class="card" style="background-color: #ffffff; padding: 2%;">
+    <div class="card" style="background-color: #ffffff;">
+      <div class="wrapper" style="background-image: url({{ entry.bild.one().url }});">
+      <img class="card-img-top mx-auto d-block" style="max-height: 160px; max-width: 160px; margin-top: 2rem; margin-bottom: 2rem;"
+       src="  {% if entry.bild3.one() is not null %}  {{ entry.bild3.one().getUrl() }}  {% endif %}" alt="Card image">
+     </div>
+     <div class="card-body">
       <h3> {{ entry.zusatzfeld2 }} </h3>
       <div id="copy"> {{ entry.zusatzfeld3 }}  </div>
-      <br>
+    </div>
     </div>
   </div>
-</div>
+</div> <!-- Die zwei Boxen mit Spenden/Schenken & Einkaufen/Spenden -->
 
 <div class="container achterspaltenlayout">
   <div class="text-center">
