--- a/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
@@ -18,39 +18,71 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
 <div class="container zwoelferspaltenlayout" >
 
   <div class="row">
-
   {% set entries = craft.entries.section('ueberUns').slug('arbeitsweise').one().children().all() %}
-
   {# If there are any entries, loop through them #}
   {% if entries | length %}
-
-      {# For each entry we find, do this #}
       {% for entry in entries %}
-
       <div class="col-1"></div>
-
-      <div class="col-3">Da gehört das Bild hin</div>
-
+      <div class="col-2">
+        <img class="img-fluid rounded-circle" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+      </div>
+      <div class="col-1"></div>
       <div class="col-8">
         <h2>{{ entry.title }}</h2>
         <div id="anleser"> {{ entry.anleser}} </div>
         <div id="copy"> {{ entry.text }} </div>
-
       </div>
       {% endfor %}
-
   {% endif %}
-
   </div>
 </div>
-</div>
+
+<div class="container achterspaltenlayout text-center">
+  {% set entries = craft.entries.section('ueberUns').slug('empfehlungen').one().children().all() %}
+  {% set entry = random(entries) %}
+  <hr style="background-color: #ed6e2c; height: 1px;">
+  <div id="zitat"> {{ entry.text }}  </div>
+  <div id="autor" > {{ entry.title }}  </div>
+  <hr style="background-color: #ed6e2c; height: 1px;">
+</div> <!-- Empfehlungen in ihrem schönen Kästchen -->
 
 <div class="container-fluid no-padding">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-ueber-uns-arbeitsweise_farm.jpg').one().getUrl() }} ">
+  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-arbeitsweise_farm.jpg').one().getUrl() }} ">
 </div>
+
+{% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
+  <div class="container achterspaltenlayout text-center">
+    {% set entries = entry.children().all() %}
+    {% set entry = random(entries) %}
+    <div id="zitat"  style="padding-bottom: 0px;"> {{ entry.text }}  </div>
+    <div id="autor"> {{ entry.title }}  </div>
+  </div>
+</div> <!-- Das Wolkenbild mit den Zitaten drin -->
+
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
+  <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
+  </div>
+
+  {% set entry = craft.entries.section('ueberUns').slug('konzept').one() %}
+
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.text }}</div>
+    </div>
+  </div>
+</div> <!-- Weitere Informationen zum Konzept -->
+
+</div> <!-- Weißer Hintergrundcontainer -->
+
 
 {% endblock %}
