--- a/templates/craft_sicherungWebsite/templates/ueberUns/motivation.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/motivation.html
@@ -10,10 +10,10 @@
 <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 <div class="container Achter-Spaltenlayout">
-  <div style="padding-bottom:80px; ">
-    <h1 style="padding-bottom: 30px;"> Lebendiger Ausdruck christlicher Hoffnung  </h1>
-    <p id="anleser"> Wir wollen Mensch, Gesellschaft und Schöpfung ganzheitlich dienen, um
-      nachhaltiger Entwicklung und würdevollem Leben eine Chance zu geben.  </p>
+  <div style="padding-bottom:80px;">
+    {% set entry = craft.entries.section('ueberUns').slug('motivation').one() %}
+    <h1 style="padding-bottom: 30px;"> {{ entry.zusatzfeld1 }}   </h1>
+    <div id="anleser"> {{ entry.zusatzfeld2 }} </div>
     </div>
   </div>
 </div>
@@ -21,37 +21,49 @@
 <div class="container-fluid no-padding style" style="background-color: #ffffff;">
 
 <div class="container zwoelferspaltenlayout">
-
   <div class="row">
-
-  {% set entries = craft.entries.section('ueberUns').slug('motivation').one().children().all() %}
-
-  {# If there are any entries, loop through them #}
-  {% if entries | length %}
-
-      {# For each entry we find, do this #}
-      {% for entry in entries %}
-
-
+    {% set entry = craft.entries.section('ueberUns').slug('entstehung').one() %}
       <div class="col-8">
         <h3>{{ entry.title }}</h3> </br>
         <div id="copy"> {{ entry.text }} </div>
       </div>
+      <div class="col-3">
+        {% set entry = craft.entries.section('fuerSie').slug('freiwilligendienst').one() %}
 
-      <div class="col-3">Da gehört der Link zum Freiwilligendienst hin</div>
-
+      <div class="card border-light">
+        <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+        <div class="card-body" style="background-color: #f8f5f2;">
+            <h3>{{ entry.title }}</h3>
+            <div id="copy"> {{ entry.anleser }} </div>
+        </div>
+      </div></div>
       <div class="col-1"></div>
-
-      {% endfor %}
-
-  {% endif %}
 
   </div>
 </div>
 </div>
 
-<div class="container-fluid no-padding">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-ueber-uns-motivation.jpg').one().getUrl() }} ">
-</div>
+  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-ueber-uns-motivation.jpg').one().getUrl() }} ">
 
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
+
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
+  <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
+  </div>
+
+  {% set entry = craft.entries.section('ueberUns').slug('der-verein').one() %}
+
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+  <div class="row">
+    <div class="col-md-4" style="padding: 0;">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.text }}</div>
+    </div>
+  </div>
+</div> <!-- Weitere Informationen zum Konzept -->
+
+</div>
 {% endblock %}
