--- a/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
@@ -10,18 +10,17 @@
 <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 <div class="container achterspaltenlayout" style="padding-top: 0px;">
-  <div style="padding-bottom:80px; ">
-    <h1 style="padding-bottom: 30px;"> Gemeinnützig und christlich  </h1>
-    <p id="anleser"> Chance e.V. ist ein gemeinnütziger Verein und eine christliche Initiative für
-      ganzheitliche, nachhaltige und partnerschaftliche Entwicklung.   </p>
-    </div>
+    {% set entry = craft.entries.section('ueberUns').slug('der-verein').one() %}
+    <h1 style="padding-bottom: 30px;"> {{ entry.zusatzfeld1 }}  </h1>
+    <div id="anleser">  {{ entry.zusatzfeld2 }} </div>
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout">
+<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
+  {% set entry = craft.entries.section('ueberUns').slug('engagement').one() %}
+  <img class="img-fluid mx-auto d-block" style="max-height: 160px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   <div class="row">
     <div class="col-md-6">
-      {% set entry = craft.entries.section('ueberUns').slug('engagement').one() %}
       <h4> {{ entry.title}} </h4>
       <div id="copy"> {{ entry.text}} </div>
     </div>
@@ -43,43 +42,51 @@
   {% set entry = craft.entries.section('ueberUns').slug('team').one() %}
   <h2> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
-
 </div>
 
 <div class="container zwoelferspaltenlayout">
-
-  <div class="row">
-
-  {% set entries = craft.entries.section('ueberUns').slug('team').one().children().all() %}
-
-  {# If there are any entries, loop through them #}
-  {% if entries | length %}
-
+  <div class="card-deck">
+    <div class="row">
+      {% set entries = craft.entries.section('ueberUns').slug('team').one().children().all() %}
       {% set counter = 0 %}
-
-      {# For each entry we find, do this #}
-      {% for entry in entries %}      {% set counter = counter + 1 %}
-
-
-      <div class="col-sm-4">
-        <div id="copy">{{ entry.anleser }}</div>
-        <div id="autor"> {{ entry.text }} </div>
+      {% for entry in entries %}  {% if entry.slug != 'fuelleintrag' %}
+      {% set counter = counter + 1 %}
+      <div class="col-md-4" style="padding-bottom: 50px;">
+      <div class="card bg-white h-100">
+        <img class="card-img-top rounded-circle mx-auto d-block" style="max-height: 160px; max-width: 160px;" src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+        <div class="card-body">
+          <div id="copy"> {{ entry.anleser }} </div>
+          <div id="copy" style="color: #ed6e2c"> {{ entry.text }}</div>
+        </div>
       </div>
-
-      {% if counter == 3 %}  <div class="col-sm-2"> </div>    {% endif %}
-
-
+    </div>
+    {% if counter == 3 %}  <div class="col-2"> </div> {% endif %}
+    {% endif %}
       {% endfor %}
-
-  {% endif %}
-
+      </div>
+    </div>
   </div>
-</div>
 
-<div class="container achterspaltenlayout">
+
+{% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
+  <div class="container achterspaltenlayout text-center">
+    {% set entries = entry.children().all() %}
+    {% set entry = random(entries) %}
+    <div id="zitat"  style="padding-bottom: 0px;"> {{ entry.text }}  </div>
+    <div id="autor"> {{ entry.title }}  </div>
+  </div>
+</div> <!-- Das Wolkenbild mit den Zitaten drin -->
+
+
+<div class="container achterspaltenlayout" style="padding-top: 3rem;">
   {% set entry = craft.entries.section('ueberUns').slug('geschichte').one() %}
   <h2> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
+</div>
+
+<div class="container zwoelferspaltenlayout" style="padding-top: 0">
+  <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
 </div>
 
 <div class="container achterspaltenlayout">
@@ -87,13 +94,71 @@
   <h4> {{ entry.title }} </h4>
   <div id="copy"> {{ entry.text }} </div>
 </div>
+</div>
+
+
+{% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-1">  </div>
+    <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
+    <div class="col-1">  </div>
+    <div class="col-7">
+      <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
+      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+    </div>
+  </div>
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
+
+<div class="container-fluid no-padding  text-center" style="background-color: #ffffff; padding-bottom: 3rem;">
 
 <div class="container-fluid no-padding">
   {% set entry = craft.entries.section('ueberUns').slug('kooperationspartner').one() %}
   <h2> {{ entry.title }} </h2>
 </div>
 
-</div>
+  <div class="card-deck">
+    <div class="row">
+      {% set entries = entry.children().all() %} {% set counter = 0 %}
+      {% for entry in entries %} {% set counter = counter + 1 %}
+      <div class="col-sm-2" style="padding: 0; margin-top: 1px;">
+    <a href="{{ entry.reinertext }}">
+      <div class="card w-100">
+        <img class="card-img-top mx-auto d-block grayscale"
+         src=" {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+      </div>
+    </a>
+    </div>
+      {% endfor %}
+    {% if counter is not divisible by(6) %}
+        {% for i in 0..10000 if counter is not divisible by(6) %}
+          <div class="col-sm-2" style="padding: 0;">
+            <div class="card w-100 h-100" > </div>
+          </div>
+          {% set counter = counter + 1 %}
+        {% endfor %}
+     {% endif %}
+      </div>
+    </div>
+    <div class="container zwoelferspaltenlayout">
+    <hr style="height: 2px;"> <p id="anleser" class="text-center"> Erfahren Sie mehr über uns </p>
+    </div>
 
+    {% set entry = craft.entries.section('ueberUns').slug('transparenz').one() %}
+
+    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+      </div>
+      <div class="col-md-8" style="padding-top: 2rem;">
+        <h3> {{ entry.title }} </h3>
+        <div id="copy"> {{ entry.text }}</div>
+      </div>
+    </div>
+    </div> <!-- Weitere Informationen zum Konzept -->
+
+    </div> <!-- Weißer Hintergrundcontainer -->
 
 {% endblock %}
