--- a/templates/craft_sicherungWebsite/templates/spenden/einmaligallgemein.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/einmaligallgemein.html
@@ -26,7 +26,51 @@
       <div class="col-sm-8">
         <h2> {{ entry.anleser }} </h2>
         <div id="copy"> {{ entry.text }}</div>
-        <div id="copy"> {{ entry.zusatzfeld1 }}</div>
+
+        <div class="container" style="background-color: #f8f5f3;">
+          <div class="row">
+            <div class="col-sm-8">
+          <ul class="nav nav-pills" id="pills-tab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active tab" style="padding: 1rem;" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">5 Euro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tab" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile1" role="tab" aria-controls="pills-profile" aria-selected="false">20 Euro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tab" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile2" role="tab" aria-controls="pills-profile" aria-selected="false">35 Euro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tab" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile3" role="tab" aria-controls="pills-profile" aria-selected="false">50 Euro</a>
+            </li>
+          </ul>
+
+            {% set entry = craft.entries.section('spenden').slug('5-euro').one() %}
+            <div class="tab-content" id="pills-tabContent">
+              <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div id="copy"> {{ entry.anleser }}  </div>
+              </div>
+              {% set entry = craft.entries.section('spenden').slug('20-euro').one() %}
+              <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab">
+                <div id="copy"> {{ entry.anleser }}  </div>
+              </div>
+              {% set entry = craft.entries.section('spenden').slug('35-euro').one() %}
+              <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab">
+                <div id="copy"> {{ entry.anleser }}  </div>
+              </div>
+              {% set entry = craft.entries.section('spenden').slug('50-euro').one() %}
+              <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab">
+                <div id="copy"> {{ entry.anleser }}  </div>
+              </div>
+            </div> <!-- Die Tabs mit den verschiedenen Auswirkungen der Spenden, wechselbar durch klicken -->
+          </div>
+          <div class="col-sm-4">
+            <img class="img-fluid h-100 w-100" style="padding-bottom: 0;" src="{{ entry.bild.one().url }}"> </div>
+          </div> <!-- Umgebende Row -->
+          </div><!-- Umgebender Container -->
+
+          {% set entry = craft.entries.section('spenden').slug('menschen-chance1').one() %}
+        <div id="copy" style="padding-top: 2rem;"> {{ entry.zusatzfeld1 }}</div>
       </div>
       <div class="col-sm-4">
         <a style="margin: 4%; margin-left: 0;" href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Jetzt Spenden</a>
