--- a/templates/craft_sicherungWebsite/templates/spenden/regelmaesigallgemein.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/regelmaesigallgemein.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px;">
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px; background-repeat: no-repeat;">
   <div class="container zwoelferspaltenlayout" style="background-color: #ffffff;">
     <div class="row">
       <div class="col-sm-7">
