spenden fast fertig

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -119,10 +119,10 @@
               </li>
 
               <li class="dropdown-submenu" style="height: 100px;">
-               <a  class="dropdown-item" tabindex="-1" href="#">Programmbezogen Spenden</a>
+               <a  class="dropdown-item" tabindex="-1" href="#">Projektbezogen Spenden</a>
                <ul class="dropdown-menu">
                  <li class="dropdown-submenu">
-                   <a class="dropdown-item" href="#">Einmalig</a>
+                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerland">Einmalig</a>
                    <ul class="dropdown-menu">
                      <li class="dropdown-item"><a href="#">Länderpate</a></li>
                      <li class="dropdown-item"><a href="#">Dorfpate</a></li>
@@ -136,8 +136,8 @@
                      <li class="dropdown-item"><a href="#">Waldpate</a></li>
                    </ul>
                  </li>
-                 <li class="dropdown-item"><a href="#">Schenken und Spenden</a></li>
-                 <li class="dropdown-item"><a href="#">Einkaufen und Spenden</a></li>
+                 <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li>
+                 <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/einkaufenundspenden">Einkaufen und Spenden</a></li>
                  <li class="dropdown-item"><a href="#">Lastschrifttermine</a></li>
 
                </ul>
