spenden fertig machen

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -110,11 +110,11 @@
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden">Allgemein Spenden</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmalig.html">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmaligallgemein.html">Einmalig</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein">Einmalig</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/regelmaesigallgemein.html">Regelmäßig</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein">Regelmäßig</a></li>
                 </ul>
               </li>
 
@@ -122,15 +122,15 @@
                <a  class="dropdown-item" tabindex="-1" href="#">Projektbezogen Spenden</a>
                <ul class="dropdown-menu">
                  <li class="dropdown-submenu">
-                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerland">Einmalig</a>
+                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Einmalig</a>
                    <ul class="dropdown-menu">
                      <li class="dropdown-item"><a href="#">Länderpate</a></li>
                      <li class="dropdown-item"><a href="#">Dorfpate</a></li>
                      <li class="dropdown-item"><a href="#">Waldpate</a></li>
                    </ul>
-                   <a class="dropdown-item" href="#">Regelmäßig</a>
+                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Regelmäßig</a>
                    <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
+                     <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
                      <li class="dropdown-item"><a href="#">Dorfpate</a></li>
                      <li class="dropdown-item"><a href="#">Kinderpate plus</a></li>
                      <li class="dropdown-item"><a href="#">Waldpate</a></li>
