--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -80,9 +80,9 @@
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte/medalid.html">1. Bericht</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/medalid-lang-1">1. Bericht</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/pancho-der-dorfchef">2. Bericht</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="#">3. Bericht</a></li>
                 </ul>
@@ -155,7 +155,7 @@
             aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
               <li class="dropdown-divider"></li>
 
               <li class="dropdown-submenu">
