--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
@@ -38,10 +38,10 @@
             <div class="row">
               <div class="col-4" style="text-align: center; white-space: nowrap;">
                  <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
-                  <img class="rounded-circle" style="margin-left: 12.5%; vertical-align: middle; max-height: 100px;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}">
+                  <img class="rounded-circle w-75" style="margin-left: 12.5%; vertical-align: middle; max-height: 100px;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}">
                 </div>
                 <div class="col-8">
-                  <div class="card-body" style="padding: 0;">
+                  <div class="card-body" style="padding: 0; padding-right: 1rem;">
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
                       <div id="copy"> {{ entry.zusatzfeld2 }} </div>
