--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
@@ -2,59 +2,109 @@
 {% extends "_layouts/layoutHome.html" %}
 
 
-
 {% block block1 %}
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-<div class="container achterspaltenlayout">
-    <div id="anleser"> {{ entry.anleser }}</div>
+  <div class="container achterspaltenlayout">
+    <div id="anleser"> {{ entry.anleserLang }}</div>
   </div>
 </div>
 
-<div class="container achterspaltenlayout">
-  <div id="copy">{{ entry.text }}
+<div class="container zwoelferspaltenlayout">
+  <div class="row"> <!-- row für das gesamte Layout der Seite -->
+    <div class="col-sm-2">  </div>
+
+    <div class="col-sm-10">
+      <div class="row">
+      <div class="col-md-8">
+        <div id="copy">{{ entry.textNebenErfahrungsbericht }} </div>
+      </div>
+
+      <div class="col-md-4" style="border-left:2px solid #ed6e2c; height: 40%;">
+        {% set entries = craft.entries.section('projekte').slug('erfahren-sie-mehr-1').one().children().all() %}
+        {% set eintrag = random(entries) %}
+        <img style="max-height: 100px;" class="rounded-circle" src="{% if eintrag.bild.one() is not null %} {{ eintrag.bild.one().url }}{% endif %}" alt="">
+        <p style="padding-top: 2rem;" id="copy"> Erfahrungsbericht </p>
+        <div id="zitat"> {{ eintrag.text }}  </div>
+        <div id="autor" > {{ eintrag.zusatzfeld1 }}  </div>
+      </div>
+      </div>
+    </div>
+
   </div>
+
+<div class="row" style="padding-top: 3rem;">
+  <div class="col-sm-2">  </div>
+  <div class="col-sm-8">
+  <div id="copy">{{ entry.restlichertext }} </div>
 </div>
 
-<div class="container zwoelferspaltenlayout" >
-  <hr>
+</div>
+
+</div>
+
+
+<div class="container zwoelferspaltenlayout">
+
+  <hr> <p class="text-center" id="anleser" style="padding-top: 2rem;"> Weitere Projektberichte</p>
   {% set slugUrsprung = entry.slug |replace({'-lang': ''}) %}
 
+  <div class="card-columns">
 
-<div class="card-columns">
+    {% set entries = craft.entries.section('projektberichte').all() %}
+    {% for entry in entries %}
 
-  {% set entries = craft.entries.section('projekte').slug('erfahren-sie-mehr').one().children().all() %}
+    <div class="card">
+      <div class="card-body" style="padding: .5rem;">
+        <p class="card-text">
+          <h4 style="margin: 0;"> {{ entry.title }} </h4>
+          <div id="copy"> {{ entry.nurDerLink }} </div>
+        </p>
+      </div>
+    </div>
 
-  {# If there are any entries, loop through them #}
-
-      {# For each entry we find, do this #}
-      {% for entry in entries %}
-      {% if entry.slug !=  slugUrsprung  %}
-
-      <div class="card">
-            <div class="row">
-              <div class="col-4" style="text-align: center; white-space: nowrap;">
-                 <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
-                  <img class="rounded-circle" style="margin-left: 12.5%; vertical-align: middle; max-height: 100px;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}">
-                </div>
-                <div class="col-8">
-                  <div class="card-body" style="padding: 0;">
-                    <p class="card-text">
-                      <h4 style="margin: 0;"> {{ entry.title }} </h4>
-                      <div id="copy"> {{ entry.zusatzfeld2 }} </div>
-                    </p>
-                  </div>
-            </div>
-          </div>
-        </div>
-
-        {% endif %}
-      {% endfor %}
-
+    {% endfor %}
   </div>
+</div>
+
+{% set entry = craft.entries.section('spendenfelderUndSo').slug('paten-dringend-gesucht').one() %}
+
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-sm-2">  </div>
+    <div class="col-lg-2 col-md-3">   <img class="img-fluid rounded-circle mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding:0;"> </div>
+    <div class="col-sm-1">  </div>
+    <div class="col-sm-6">
+      <h4 style="color: white;"> {{ entry.title }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.text }}</div>
+    </div>
+  </div>
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
+
+
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
+
+<div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
+<p id="anleser" class="text-center"> Das könnte Sie auch interessieren </p>
+</div>
+
+{% set entry = craft.entries.section('fuerSie').slug('johanna').one() %}
+
+<div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+<div class="row">
+  <div class="col-md-4" style="padding: 0;">
+    <img class="img-fluid mx-auto d-block" style="padding-bottom: 0px; max-height: 200px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+  </div>
+  <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px;">
+    <h3> Für Sie </h3>
+    <div id="copy"> {{ entry.text }}  </div>
+  </div>
+</div>
+</div> <!-- Weitere Informationen zum Konzept -->
+
 </div>
 
 {% endblock %}
