erfahrungsbericht, projektbericht, empfehlungen automatisch navigierbar machen und hübsch anzeigen

--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
@@ -68,7 +68,7 @@
 
     {% endfor %}
   </div>
-</div>
+</div> <!-- Die restlichen Projektberichte -->
 
 {% set entry = craft.entries.section('spendenfelderUndSo').slug('paten-dringend-gesucht').one() %}
 
@@ -91,7 +91,7 @@
 <p id="anleser" class="text-center"> Das könnte Sie auch interessieren </p>
 </div>
 
-{% set entry = craft.entries.section('fuerSie').slug('johanna').one() %}
+{% set entry = craft.entries.section('spendenfelderUndSo').slug('fuer-sie').one() %}
 
 <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
 <div class="row">
