--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -79,24 +79,10 @@
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/medalid-lang-1">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/pancho-der-dorfchef">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
               </li>
 
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
               </li>
             </li>
           </ul>
@@ -119,7 +105,7 @@
               </li>
 
               <li class="dropdown-submenu" style="height: 100px;">
-               <a  class="dropdown-item" tabindex="-1" href="#">Projektbezogen Spenden</a>
+               <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Projektbezogen Spenden</a>
                <ul class="dropdown-menu">
                  <li class="dropdown-submenu">
                    <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Einmalig</a>
