--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/erfahrungsberichte.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/erfahrungsberichte.html
@@ -23,7 +23,7 @@
 
     <div class="card-columns">
 
-  {% set entries = craft.entries.section('fuerSie').slug('erfahrungsberichte').one().children().all() %}
+  {% set entries = craft.entries.section('freiwilligenberichte').all() %}
     {% if entries | length %}
         {% for entry in entries %}
         <div class="card bg-white">
@@ -34,7 +34,9 @@
           <div class="card-body" style="padding-top: 3rem;">
             <p class="card-text">
               <h3> {{ entry.title }} </h3>
-              <div id="copy"> {{ entry.anleser }} </div>
+              <div id="copy"> {{ entry.anleser }}
+              <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren</a>
+              </div>
             </p>
           </div>
         </div>
