--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
-  <img class="img-fluid" src="{% if entry.bild2.one() is not null %} {{ entry.bild2.one().url }} {% endif %}" alt="">
+  <img class="img-fluid mx-auto d-block" style="max-height: 200px;" src="{% if entry.bild2.one() is not null %} {{ entry.bild2.one().url }} {% endif %}">
 </div>
 
 <div class="container achterspaltenlayout">
@@ -25,12 +25,12 @@
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout" >
+<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
   <hr> <div id="copy" class="text-center" style="padding-bottom: 3rem; padding-top: 1rem;"> Weitere Erfahrungsberichte  </div>
 
 <div class="card-columns">
 
-  {% set entries = craft.entries.section('erfahrungsberichte').all() %}
+  {% set entries = craft.entries.section('ueberUns').slug('empfehlungen').one().children().all() %}
 
       {% for entry in entries %}
       <div class="card">
@@ -43,7 +43,9 @@
                   <div class="card-body" style="padding: 0; padding-right: 1rem;">
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
-                      <div id="copy"> {{ entry.berufMitLink }} </div>
+                      <div id="copy">
+                        <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}"> Mehr erfahren</a>
+                      </div>
                     </p>
                   </div>
             </div>
