--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
@@ -25,12 +25,12 @@
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout" >
+<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
   <hr> <div id="copy" class="text-center" style="padding-bottom: 3rem; padding-top: 1rem;"> Weitere Erfahrungsberichte  </div>
 
 <div class="card-columns">
 
-  {% set entries = craft.entries.section('erfahrungsberichte').all() %}
+  {% set entries = craft.entries.section('freiwilligenberichte').all() %}
 
       {% for entry in entries %}
       <div class="card">
@@ -43,7 +43,9 @@
                   <div class="card-body" style="padding: 0; padding-right: 1rem;">
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
-                      <div id="copy"> {{ entry.berufMitLink }} </div>
+                      <div id="copy">
+                        <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren</a>
+                      </div>
                     </p>
                   </div>
             </div>
