--- a/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -112,7 +112,7 @@
 </div>
 
   <div class="container achterspaltenlayout text-center">
-    {% set entries = craft.entries.section('projekte').slug('erfahren-sie-mehr').one().children().all() %}
+    {% set entries = craft.entries.section('projektberichte').all() %}
     {% set entry = random(entries) %}
 
     <hr style="background-color: #ed6e2c; height: 1px;">
