--- a/templates/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
@@ -36,7 +36,9 @@
           <p class="card-text">
             <h3> {{ entry.title }} </h3>
             <h4> {{ entry.anleser }} </h4>
-            <div id="copy"> {{ entry.text }} </div>
+            <div id="copy"> {{ entry.text }}
+              <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}"> Weiterlesen</a>
+            </div>
           </p>
           </p>
         </div>
